# MosekRegression

./: .buildinfo  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  .rhiza.history  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Data.html  Data.ipynb  Dockerfile  Dockerfile-Test  DownloadData.py  EquityPortfolios.ipynb  LICENSE  Makefile  MinVariance.py  Minimum Variance.html  Minimum Variance.ipynb  MosekSolver.py  Predictor.py  README.md  book.sh  build.sh  config.py  copyright.txt  create-kernel.sh  create_kernel.sh  data.csv  docker-compose.test.yml  docker-compose.yml  experiment1.py  experiments.py  fetchData.py  genindex.html  loadData.py  makedoc.py  pyproject.toml  python  (+7 more)
.github/: renovate.json  template.yml
.github/rhiza/: template.yml
.github/workflows/: book.yml  ci.yml  codeql.yml  deptry.yml  maintain.yml  marimo.yml  pre-commit.yml  release.yml  rhiza.yml  sync.yml
.rhiza/: .env  history  rhiza.mk  template.yml
_sources/docs/: MinVariance.ipynb  loadData.ipynb
age/: dependency-age-sorted.txt  dependency-age.txt
artifacts/sphinx/: genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html
book/: .buildinfo  _config.yml  _toc.yml  genindex.html  objects.inv  search.html  searchindex.js
book/data/: data.csv
book/docs/: MinVariance.html  MinVariance.ipynb  Predictor.html  Predictor.ipynb  api.html  api.md  index.html  index.md  loadData.html  loadData.ipynb
book/marimo/: MinVariance.ipynb  MinVariance.py  Predictor.ipynb  Predictor.py  loadData.ipynb  loadData.py
book/sphinx/: conf.py
books/: MinVariance.ipynb  MinVariance.py  Predictor.py  experiments.py  loadData.ipynb  loadData.py  solver.py
books/data/: data.csv
books/mosekTools/: solver.py
data/: DownloadData.py  data.csv
data/dax/: data.csv  symbols.csv
data/ssmi/: symbols.csv
doc/: Makefile  conf.py  index.rst  make.bat  mosekTools.data.rst  mosekTools.rst  mosekTools.solver.model.rst  mosekTools.solver.rst  mosekTools.util.rst
docs/: Makefile  MinVariance.html  Predictor.html  conf.py  index.html  index.rst  loadData.html  make.bat
license/: mosek.lic
mosekTools/data/: Data.py  yahoo.py
mosekTools/signal/: signal.py
mosekTools/solver/: finance.py  solver.py  solver2.py
mosekTools/util/: Model.py  distance.py  stats.py  util.py
mosek_tools/: solver.py
pdoc/: index.html  mosek_tools.html  search.js
pdoc/mosek_tools/: solver.html
sphinx/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree  license.doctree
sphinx/_modules/: index.html
sphinx/_sources/: index.rst.txt
sphinx/autoapi/: index.html
src/mosek_tools/: __init__.py  solver.py
src/tests/: conftest.py  test_lsq.py  test_tools.py
taskfiles/: docs.yml  quality.yml
tests/: conftest.py  suite.py  test_lsq.py  test_solver.py  test_taskfile.py  test_tools.py  tests.mk
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/data/: __init__.py  testyahoo.py
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_4665555250ddb338___init___py.html  z_4665555250ddb338_solver_py.html  z_a952ec8ff2e28a0f___init___py.html  (+1 more)
tests/resources/: data.csv
util/: MosekUtil.py
(+79 files in other folders)
