[project]
name = "mosektools"
version = "0.0.0"
description = "..."
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
repository = "https://github.com/tschm/mosekregression"
requires-python = ">=3.10"
dependencies = [
"pandas",
"mosek",
"scipy",
    ]

[project.urls]
repository = "https://github.com/tschm/MosekRegression"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "plotly",
]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mosek_tools"]
