[project]
name = "mosektools"
version = "0.0.0"
description = "..."
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mosek>=11.0.29",
    "numpy>=2.3.4",
]

[project.urls]
repository = "https://github.com/tschm/MosekRegression"

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "pre-commit>=4.2.0",
    "pandas>=2.3.0",
    "plotly>=6.0",
    "yfinance>=0.2.65",
    "marimo==0.18.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mosek_tools"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]
