[project]
name = "mosektools"
version = "0.1.3"
description = "..."
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mosek", "optimization", "regression", "portfolio", "markowitz", "lasso"]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mosek>=11.0.29",
    "numpy>=2.3.4",
]

[project.urls]
Repository = "https://github.com/tschm/MosekRegression"
Homepage = "https://tschm.github.io/MosekRegression/book"
Documentation = "https://tschm.github.io/MosekRegression/book"
Issues = "https://github.com/tschm/MosekRegression/issues"

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "pre-commit>=4.2.0",
    "pandas>=2.3.0",
    "plotly>=6.0",
    "yfinance>=0.2.65",
    "marimo==0.18.4",
    "python-dotenv==1.2.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mosek_tools"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]
